force-app/main/default/objects/Order/fields/B2B_S_Graving__c.field-meta.xml
<CustomField>
    <fullName>B2B_S_Graving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields store the if the user selected S graving from VS configurator</description>
    <label>S Graving</label>
    <type>Checkbox</type>
</CustomField>