force-app/main/default/objects/Order/fields/B2B_Selected_Accent_Ring_Image__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Accent_Ring_Image__c</fullName>
    <description>This field will hold the selected accent ring image url of the lens configurator.</description>
    <label>Selected Accent Ring Image</label>
    <type>Url</type>
</CustomField>