force-app/main/default/objects/Order/fields/B2B_Selected_Accent_Ring_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Accent_Ring_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will hold the selected accent ring from  the lens configurator.</description>
    <label>Selected Accent Ring Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Selected Accent Ring Product)</relationshipLabel>
    <relationshipName>Orders5</relationshipName>
    <type>Lookup</type>
</CustomField>