force-app/main/default/objects/Order/fields/B2B_Selected_Color_Groove_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selected_Color_Groove_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will hold the Selected Color Groove value of the lens configurator.</description>
    <label>Selected Color Groove Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Selected Color Groove Product)</relationshipLabel>
    <relationshipName>Orders6</relationshipName>
    <type>Lookup</type>
</CustomField>