force-app/main/default/objects/Order/fields/B2B_SF__c.field-meta.xml
<CustomField>
    <fullName>B2B_SF__c</fullName>
    <description>This field will hold the SF value of the lens configurator.</description>
    <label>SF</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>