force-app/main/default/objects/Order/fields/B2B_Sphere_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sphere_Left__c</fullName>
    <description>This field stores the Sphere value of Left Eye.</description>
    <label>Sphere - Left Eye</label>
    <length>255</length>
    <type>Text</type>
</CustomField>