force-app/main/default/objects/Order/fields/B2B_Sphere_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sphere_Right__c</fullName>
    <description>This field stores the sphere value of Right Eye.</description>
    <label>Sphere - Right Eye</label>
    <length>255</length>
    <type>Text</type>
</CustomField>