force-app/main/default/objects/Order/fields/B2B_Thickness_Matching_Calculator_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_Thickness_Matching_Calculator_Left__c</fullName>
    <description>Schneider call parameter minEdge:left will be mapped to this field.</description>
    <label>Thickness Matching Calculator Left</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>