force-app/main/default/objects/Order/fields/B2B_Thickness_Matching_Calculator_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_Thickness_Matching_Calculator_Right__c</fullName>
    <description>Schneider call parameter minEdge:right will be mapped to this field.</description>
    <label>Thickness Matching Calculator Right</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>