force-app/main/default/objects/Order/fields/B2B_Visual_Preference__c.field-meta.xml
<CustomField>
    <fullName>B2B_Visual_Preference__c</fullName>
    <description>This field will hold the visual preference value from the lens configurator.</description>
    <label>Visual Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long-distance</fullName>
            </value>
            <value>
                <fullName>long-distance balanced</fullName>
            </value>
            <value>
                <fullName>middle-distance</fullName>
            </value>
            <value>
                <fullName>close-range</fullName>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>