force-app/main/default/objects/Order/fields/B2B_Width__c.field-meta.xml
<CustomField>
    <fullName>B2B_Width__c</fullName>
    <description>This field will hold the width value of the lens configurator.</description>
    <label>Width</label>
    <length>25</length>
    <type>Text</type>
</CustomField>