force-app/main/default/objects/Order/fields/B2B_with_Accent_Ring__c.field-meta.xml
<CustomField>
    <fullName>B2B_with_Accent_Ring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the accent ring value of the lens configurator.</description>
    <label>with Accent Ring</label>
    <type>Checkbox</type>
</CustomField>