force-app/main/default/objects/Order/fields/B2B_With_Color_Groove__c.field-meta.xml
<CustomField>
    <fullName>B2B_With_Color_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the color groove value of the lens configurator.</description>
    <label>With Color Groove</label>
    <type>Checkbox</type>
</CustomField>