force-app/main/default/objects/Order/fields/B2B_With_Partial_Color_Groove__c.field-meta.xml
<CustomField>
    <fullName>B2B_With_Partial_Color_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field maps the user&apos;s partial groove selection on VS configurator to Order</description>
    <label>With Partial Color Groove</label>
    <type>Checkbox</type>
</CustomField>