force-app/main/default/objects/Order/fields/B2B_without_clipin__c.field-meta.xml
<CustomField>
    <fullName>B2B_without_clipin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicable option if order type is lens only for RX</description>
    <inlineHelpText>Applicable option if order type is lens only for RX</inlineHelpText>
    <label>Without Clip-in?</label>
    <type>Checkbox</type>
</CustomField>