force-app/main/default/objects/Order/fields/B2B_Working_Distance__c.field-meta.xml
<CustomField>
    <fullName>B2B_Working_Distance__c</fullName>
    <description>This field is used to store the working distance.</description>
    <label>Working Distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>