force-app/main/default/objects/Order/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
            <value>
                <fullName>B2B-Shop (Old)</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Click &amp; Collect</fullName>
            </value>
            <value>
                <fullName>Online EDI</fullName>
            </value>
            <value>
                <fullName>B2C Online Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>