force-app/main/default/objects/Order/recordTypes/B2B_Order.recordType-meta.xml
<RecordType>
    <fullName>B2B_Order</fullName>
    <active>true</active>
    <label>B2B Order</label>
</RecordType>