force-app/main/default/objects/Order/recordTypes/B2C_Order.recordType-meta.xml
<RecordType>
    <fullName>B2C_Order</fullName>
    <active>true</active>
    <label>B2C Order</label>
</RecordType>